# ostis-geography

./: README.md  interface_instruction  readme  scraper.py  search_coord.py
problem-solver/cxx/parksModule/: CMakeLists.txt  ParksModule.cpp  ParksModule.hpp
problem-solver/py/: CMakeLists.txt
problem-solver/py/CityModule/: CMakeLists.txt  CityModule.cpp  CityModule.hpp  CityService.hpp
problem-solver/py/CountAverageBooksModule/: CMakeLists.txt  CountAverageBooksModule.cpp  CountAverageBooksModule.hpp  CountAverageBooksService.hpp
problem-solver/py/CountAverageModule/: CMakeLists.txt  CountAverageModule.cpp  CountAverageModule.hpp  CountAverageService.hpp
problem-solver/py/CustomAgent/: CMakeLists.txt  CustomAgent.cpp  CustomModule.hpp  CustomService.hpp
problem-solver/py/DistanceAgent/: CMakeLists.txt  DistanceModule.cpp  DistanceModule.hpp  DistanceService.hpp
problem-solver/py/DistrictModule/: CMakeLists.txt  DistrictModule.cpp  DistrictModule.hpp  DistrictService.hpp
problem-solver/py/DistrictSearchAgent/: CMakeLists.txt  DistrictSearchModule.cpp  DistrictSearchModule.hpp  DistrictSearchService.hpp
problem-solver/py/DrivingSchoolsModule/: CMakeLists.txt  DrivingSchoolsModule.cpp  DrivingSchoolsModule.hpp  DrivingSchoolsService.hpp
problem-solver/py/ExampleModule/: ExampleModule.cpp  ExampleModule.hpp
problem-solver/py/FindBusStationAgent/: CMakeLists.txt  FindBusStationModule.cpp  FindBusStationModule.hpp  FindBusStationService.hpp
problem-solver/py/FindBusStationByDistrictAgent/: CMakeLists.txt  FindBusStationByDistrictModule.cpp  FindBusStationByDistrictModule.hpp  FindBusStationByDistrictService.hpp
problem-solver/py/FindBySityAndOpenTimeModule/: CMakeLists.txt  FindBySityAndOpenTimeModule.cpp  FindBySityAndOpenTimeModule.hpp  FindBySityAndOpenTimeService.hpp
problem-solver/py/FindCateringOrganizationByCuisineAgent/: CMakeLists.txt  FindCateringOrganizationByCuisineModule.cpp  FindCateringOrganizationByCuisineModule.hpp  FindCateringOrganizationByCuisineService.hpp
problem-solver/py/FindCateringOrganizationByDayOfWeekAgent/: CMakeLists.txt  FindCateringOrganizationByDayOfWeekModule.cpp  FindCateringOrganizationByDayOfWeekModule.hpp  FindCateringOrganizationByDayOfWeekService.hpp
problem-solver/py/FindCateringOrganizationByOpenYearAgent/: CMakeLists.txt  FindCateringOrganizationByOpenYearModule.cpp  FindCateringOrganizationByOpenYearModule.hpp  FindCateringOrganizationByOpenYearService.hpp
problem-solver/py/FindCateringOrganizationByPriceCategoryAgent/: CMakeLists.txt  FindCateringOrganizationByPriceCategoryModule.cpp  FindCateringOrganizationByPriceCategoryModule.hpp  FindCateringOrganizationByPriceCategoryService.hpp
problem-solver/py/FindCateringOrganizationByRateAgent/: CMakeLists.txt  FindCateringOrganizationByRateModule.cpp  FindCateringOrganizationByRateModule.hpp  FindCateringOrganizationByRateService.hpp
problem-solver/py/FindCateringOrganizationByWorkingHoursAgent/: CMakeLists.txt  FindCateringOrganizationByWorkingHoursModule.cpp  FindCateringOrganizationByWorkingHoursModule.hpp  FindCateringOrganizationByWorkingHoursService.hpp
problem-solver/py/FindSecondarySpecialSchoolsPoCityAgent/: CMakeLists.txt  FindSecondarySpecialSchoolsPoCityModule.cpp  FindSecondarySpecialSchoolsPoCityModule.hpp  FindSecondarySpecialSchoolsPoCityService.hpp
problem-solver/py/FindSecondarySpecialSchoolsPoOblastiAgent/: CMakeLists.txt  FindSecondarySpecialSchoolsPoOblastiModule.cpp  FindSecondarySpecialSchoolsPoOblastiModule.hpp  FindSecondarySpecialSchoolsPoOblastiService.hpp
problem-solver/py/FindSecondarySpecialSchoolsPoOpenYearAgent/: CMakeLists.txt  FindSecondarySpecialSchoolsPoOpenYearModule.cpp  FindSecondarySpecialSchoolsPoOpenYearModule.hpp  FindSecondarySpecialSchoolsPoOpenYearService.hpp
problem-solver/py/FoundationYearModule/: CMakeLists.txt  FoundationYearModule.cpp  FoundationYearModule.hpp  FoundationYearService.hpp
problem-solver/py/HolyAgent/: CMakeLists.txt  HolyModule.cpp  HolyModule.hpp  HolyService.hpp
problem-solver/py/HotelsModule/: HotelsModule.cpp
problem-solver/py/LengthAverageModule/: CMakeLists.txt  LengthAverageModule.cpp  LengthAverageModule.hpp  LengthAverageService.hpp
problem-solver/py/LibraryModule/: CMakeLists.txt  LibraryModule.cpp  LibraryModule.hpp  LibraryService.hpp
problem-solver/py/PoliceTranslatorModule/: CMakeLists.txt  PoliceTranslatorModule.cpp  PoliceTranslatorModule.hpp  PoliceTranslatorService.hpp
problem-solver/py/SchoolTranslatorModule/: CMakeLists.txt  SchoolTranslatorModule.cpp  SchoolTranslatorModule.hpp  SchoolTranslatorService.hpp
problem-solver/py/SearchCinemasInTheCityAgent/: CMakeLists.txt  SearchCinemasInTheCityModule.cpp  SearchCinemasInTheCityModule.hpp  SearchCinemasInTheCityService.hpp
problem-solver/py/SearchCinemasInTheDistrictAgent/: CMakeLists.txt  SearchCinemasInTheDistrictModule.cpp  SearchCinemasInTheDistrictModule.hpp  SearchCinemasInTheDistrictService.hpp
problem-solver/py/SearchClosedTheatersAgent/: CMakeLists.txt  SearchClosedTheatersModule.cpp  SearchClosedTheatersModule.hpp  SearchClosedTheatersService.hpp
problem-solver/py/SearchCulinaryShopsAgent/: CMakeLists.txt  SearchCulinaryShopsModule.cpp  SearchCulinaryShopsModule.hpp  SearchCulinaryShopsService.hpp
problem-solver/py/SearchEstatesByAreaAgent/: CMakeLists.txt  SearchEstatesByAreaModule.cpp  SearchEstatesByAreaModule.hpp  SearchEstatesByAreaService.hpp
problem-solver/py/SearchEstatesByCityAgent/: CMakeLists.txt  SearchEstatesByCityModule.cpp  SearchEstatesByCityModule.hpp  SearchEstatesByCityService.hpp
problem-solver/py/SearchEstatesByDistrictAgent/: CMakeLists.txt  SearchEstatesByDistrictModule.cpp  SearchEstatesByDistrictModule.hpp  SearchEstatesByDistrictService.hpp
problem-solver/py/SearchEstatesByLayerAgent/: CMakeLists.txt  SearchEstatesByLayerModule.cpp  SearchEstatesByLayerModule.hpp  SearchEstatesByLayerService.hpp
problem-solver/py/SearchEstatesByPriceAgent/: CMakeLists.txt  SearchEstatesByPriceModule.cpp  SearchEstatesByPriceModule.hpp  SearchEstatesByPriceService.hpp
(+10884 files in other folders)
