add_subdirectory(OpenStreetMapAgent)
add_subdirectory(FindCateringOrganizationByDayOfWeekAgent)
add_subdirectory(FindCateringOrganizationByWorkingHoursAgent)
add_subdirectory(FindCateringOrganizationByRateAgent)
add_subdirectory(FindCateringOrganizationByCuisineAgent)
add_subdirectory(FindCateringOrganizationByOpenYearAgent)
add_subdirectory(FindCateringOrganizationByPriceCategoryAgent)
